--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
 	
 	<div class="container showgrid">
-		
+		<div class="grid_2 alpha">
 		<!-- 1st Column -->
 		<h3>Column 1</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, ratione sunt quam molestiae qui necessitatibus animi. Porro, soluta, harum quo eligendi tempora laudantium vitae odio sed quis ut natus praesentium.</p>
-		
+		</div class="omega">
 
 		<!-- 2nd Column -->	
 		<h3>Column 2</h3>
